--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body{
 /* ===== HERO STYLING ===== */
 .hero{
     height: 55%;
-    background-image: url("../../desktop/image-hero.jpg");
+    background-image: url("../images/desktop/image-hero.jpg");
     background-repeat: no-repeat;
     background-position: top center;
     background-size: cover;
