--- a/style.css
+++ b/style.css
@@ -23,12 +23,20 @@ body{
     margin: 0;
 }
 /* ===== HERO STYLING ===== */
+main{
+    position: relative;
+}
+
+.hero_image{
+    position: absolute;
+    z-index: -10000;
+    background-repeat: no-repeat;
+    height: 500px;
+    width: 100%;
+}
+
 .hero{
     height: 55%;
-    background-image: url("_images/desktop/image-hero.jpg");
-    background-repeat: no-repeat;
-    background-position: top center;
-    background-size: cover;
     display: grid;
     grid-template-rows: repeat(1, 15%);
     grid-template-columns: repeat(12, 1fr);
@@ -378,6 +386,9 @@ footer{
         background-size: 100%;
     }
 
+    .hero_image{
+        display: none;
+    }
     #nav-menu {
         display: flex;
         justify-content: space-between;
