--- a/style.css
+++ b/style.css
@@ -25,14 +25,16 @@ body{
 /* ===== HERO STYLING ===== */
 main{
     position: relative;
-})
+}
 
 
 
 .hero{
     height: 55%;
     display: grid;
-    background-image: url(images/desktop/image-hero.jpg);    
+    background-image: url(images/desktop/image-hero.jpg);  
+    background-size: cover;
+    background-repeat: no-repeat;
     grid-template-rows: repeat(1, 15%);
     grid-template-columns: repeat(12, 1fr);
 }
