--- a/style.css
+++ b/style.css
@@ -378,7 +378,7 @@ footer{
     .hero{
         height: 400px;
         display: block;
-        background-image: url(/image-hero.jpg);
+        background-image: url(image-hero.jpg);
         background-repeat: no-repeat;
         background-size: 100%;
     }
